// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render correctly 1`] = `
<div>
  <header>
    <img
      alt=""
      class="logo"
      src="#"
    />
    <nav
      class="nav"
    >
      <a
        class="text-link"
        href="/"
      >
        Home
      </a>
      <a
        class="text-link"
        href="/shop"
      >
        Shop
      </a>
    </nav>
  </header>
  <h1>
    Hello from home
  </h1>
</div>
`;

exports[`Cart component should render correctly 1`] = `
<div>
  <section
    class="cart"
  >
    <h3>
      Shopping Cart
    </h3>
    <section
      class="cart-items"
    >
      <section
        class="item-list"
      >
        <h4
          class="item-title"
        >
          foo
        </h4>
        <img
          alt=""
          class="item-img"
          src=""
        />
        <label
          for="count"
        >
          Quantity: 
        </label>
        <button
          class="item-sub-btn"
        >
          -
        </button>
        <input
          id="count"
          type="number"
          value="1"
        />
        <button
          class="item-add-btn"
        >
          +
        </button>
        <p
          class="product-total"
        >
          $
          100
        </p>
      </section>
      <section
        class="item-list"
      >
        <h4
          class="item-title"
        >
          foo
        </h4>
        <img
          alt=""
          class="item-img"
          src=""
        />
        <label
          for="count"
        >
          Quantity: 
        </label>
        <button
          class="item-sub-btn"
        >
          -
        </button>
        <input
          id="count"
          type="number"
          value="1"
        />
        <button
          class="item-add-btn"
        >
          +
        </button>
        <p
          class="product-total"
        >
          $
          50
        </p>
      </section>
    </section>
    <p
      class="total"
    >
      Order total: $
    </p>
  </section>
</div>
`;

exports[`Navbar component should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <img
          alt=""
          class="logo"
          src="#"
        />
        <nav
          class="nav"
        >
          <a
            class="text-link"
            href="/"
          >
            Home
          </a>
          <a
            class="text-link"
            href="/shop"
          >
            Shop
          </a>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header>
      <img
        alt=""
        class="logo"
        src="#"
      />
      <nav
        class="nav"
      >
        <a
          class="text-link"
          href="/"
        >
          Home
        </a>
        <a
          class="text-link"
          href="/shop"
        >
          Shop
        </a>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Product Card Component should render correctly 1`] = `
<div>
  <section
    class="card"
  >
    <h3
      class="card-heading"
    >
      foo
    </h3>
    <img
      alt="foo"
      class="card image"
      src=""
    />
    <p
      class="card-price"
    >
      100
    </p>
    <label
      class="card-label"
      for="quantity"
    >
      Quantity:
    </label>
    <input
      class="card-input"
      id="quantity"
      type="number"
      value="1"
    />
    <button>
      Add to cart
    </button>
  </section>
</div>
`;

exports[`Shop component should render correctly 1`] = `
<div>
  <section
    class="shop"
  >
    <section
      class="cart"
      role="status"
    >
      Items in Cart: 
      0
    </section>
    <button
      class="show-cart"
    >
      Go to cart
    </button>
    <section
      class="book-container"
    >
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 1
        </h3>
        <img
          alt="test book 1"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 2
        </h3>
        <img
          alt="test book 2"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 3
        </h3>
        <img
          alt="test book 3"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 4
        </h3>
        <img
          alt="test book 4"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 5
        </h3>
        <img
          alt="test book 5"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
      <section
        class="card"
      >
        <h3
          class="card-heading"
        >
          test book 6
        </h3>
        <img
          alt="test book 6"
          class="card image"
          src=""
        />
        <p
          class="card-price"
        >
          25
        </p>
        <label
          class="card-label"
          for="quantity"
        >
          Quantity:
        </label>
        <input
          class="card-input"
          id="quantity"
          type="number"
          value="1"
        />
        <button>
          Add to cart
        </button>
      </section>
    </section>
  </section>
</div>
`;
